modification img_background + css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <main>
         <div class="container">
-            <img src="./images/venise/venise.jpg" alt="Venise" id="img_background">
-            <i class="fa-solid fa-arrow-left" id="leftArrow"></i>
+            <img src="./images/venise/carnaval_venise.jpg" alt="Venise" id="img_background">
+            <i class="fas fa-arrow-left arrow" id="leftArrow"></i>
             <div class="cube_container">
                 <div class="cube">
                     <img src="./images/venise/venise1.jpg" class="side" id="front"></img>
@@ -28,7 +28,7 @@
                     <img src="./images/venise/venise6.jpg" class="side" id="back"></img>
                 </div>
             </div>
-            <i class="fa-solid fa-arrow-right" id="rightArrow"></i>
+            <i class="fas fa-arrow-right arrow" id="rightArrow"></i>
         </div>
     </main>
 
