ajout favicon + modif ReadMe

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/291707f091.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
-
     <title>Cubes 3D en Javascript</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="cube_3D_js.png" />
 </head>
 
 <body>
